refactor(catalog-backend): align catalog API and external search integration
feat(catalog-frontend): update search flows and add book edit support